k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki-app
  namespace: dev-tai333-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiki-app
  template:
    metadata:
      labels:
        app: wiki-app
    spec:
      securityContext:
        fsGroup: 1000

      containers:
        - name: app
          image: wiki-app:latest
          imagePullPolicy: Never
          command: ["php-fpm", "-F"]
          volumeMounts:
            - name: wordpress-code
              mountPath: /var/www/dev-k8s.tai333.cloud
            - name: php-fpm-sock
              mountPath: /var/run/php-fpm

        - name: nginx
          image: wiki-nginx:latest
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: wordpress-code
              mountPath: /var/www/dev-k8s.tai333.cloud
            - name: php-fpm-sock
              mountPath: /var/run/php-fpm

      volumes:
        - name: wordpress-code
          emptyDir: {}
        - name: php-fpm-sock
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: wiki-app
  namespace: dev-tai333-k8s
spec:
  selector:
    app: wiki-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
