k8s/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki-mysql
  namespace: dev-tai333-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiki-mysql
  template:
    metadata:
      labels:
        app: wiki-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: wiki-mysql
  namespace: dev-tai333-k8s
spec:
  clusterIP: None
  selector:
    app: wiki-mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
      protocol: TCP
